--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
+    "@tanstack/react-query-devtools": "^5.84.1",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "jotai": "^2.12.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
